<resources>
    <string name="app_name">QUIZ</string>
    <string-array name="topics">
        <item>Language Fundamentals</item>
        <item>Operators And Assignments</item>
        <item>Declarations and Access Control</item>
        <item>Assertions</item>
        <item>Exceptions</item>
        <item>Inner Classes</item>
        <item>Garbage Collections</item>
        <item>Java.lang Class</item>
        <item>Flow Control</item>
        <item>Objects and Collections</item>
        <item>Threads</item>
        <item>Overall Questions</item>
    </string-array>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_link_to_register">Not a member? Get registered now!</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="rules">1)Double clicking the answer will not be selected\n2)No negative evaluation\n3)For every right answer,1 mark will be awarded\n4)Time alloted-3 minutes\n5)After completion of time your result will be displayed\n6)After completion of questions , your result will be displayed\n7)You can view answers with explanation after completion\n8)When you quit the exam in the middle ,your score is displayed until then.\n
        \n\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t\t<b>All The Best</b>
    </string>
    <string name="dashboard">My Score Board</string>
    <string name="logout">Logout</string>
    <string name="action_profile">Profile</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="button">Button</string>
    <string name="QLS">Question is Loading</string>
    <string name="Mark">Marks</string>
    <string name="LanFun">Language Fundamentals</string>
    <string name="sX">X</string>
    <string name="OandA">Operators and Assignments</string>
    <string name="DAC">Declarations and Access Control</string>
    <string name="Assertion">Assertions</string>
    <string name="Exception">Exceptions</string>
    <string name="InnerClass">Inner Classes</string>
    <string name="GarbageCollection">Garbage Collections</string>
    <string name="JavaLang">Java.lang Class</string>
    <string name="flowcontrol">Flow Control</string>
    <string name="OandC">Objects And Collections</string>
    <string name="Thread">Threads</string>
    <string name="Overall">Overall Questions</string>
    <string name="result">RESULT</string>
    <string name="TotalQues">Total Questions</string>
    <string name="t0">0</string>
    <string name="correct">Correct</string>
    <string name="wrong">Wrong</string>
    <string name="viewexplain">VIEW EXPLANATION</string>
    <string name="question">Question</string>
    <string name="A">A)</string>
    <string name="B">B)</string>
    <string name="C">C)</string>
    <string name="D">D)</string>
    <string name="answer">Answer</string>
    <string name="explain">Explanation</string>
    <string name="Attempquiz">Attempt Quiz</string>
    <string name="Topic">Topic</string>
    <string name="SImg">Image</string>
    <string name="emailtoast">Enter email address!</string>
    <string name="passtoast">Enter password!</string>
    <string name="btemtoast">Enter your registered email id</string>
    <string name="rpstoast">We have sent you instructions to reset your password!</string>
    <string name="rpftoast">Failed to send reset email!</string>
    <string name="cancelErr">Errrorrr</string>
    <string name="suptoast">Password too short, enter minimum 6 characters!</string>
    <string name="eng">Features of Java</string>
    <string name="si1">https://d2h0cx97tjks2p.cloudfront.net/blogs/wp-content/uploads/sites/2/2018/01/Features-of-java-01-1.jpg</string>
    <string name="si2">https://cdn-images-1.medium.com/max/1600/1*uHkhqBoxDWJPLs3lXrYghA.jpeg</string>
</resources>